changed image names, and fixed spacing issues

--- a/scss/custom.css
+++ b/scss/custom.css
@@ -12097,8 +12097,16 @@ textarea.form-control-lg {
   background-color: #f8f9fa;
 }
 
+.pj-main img {
+  max-width: 400px;
+}
+
+.pj-main img.img-lg {
+  max-width: 700px;
+}
+
 .pj-main ul,
-ol {
+.pj-main ol {
   font-size: 1.2rem;
   line-height: 1.8;
 }
@@ -12132,6 +12140,12 @@ ol {
   border-bottom-style: dotted;
 }
 
+/* used to add color and pointer to text in the parts section, often used to link to datasheets */
+.pj-part-link {
+  color: #0091e1;
+  cursor: pointer;
+}
+
 .pj-part-table {
   padding: 0px 20px 20px 20px;
   border-collapse: separate;
@@ -12147,12 +12161,6 @@ ol {
   max-width: 800px;
   height: auto;
   overflow: scroll;
-}
-
-.pj-img {
-  float: left;
-  width: 100%;
-  max-width: 800px;
 }
 
 .pj-code {
@@ -12174,10 +12182,15 @@ pre code.pj-code {
   max-width: 450px;
 }
 
+li .nav-item {
+  width: 100%;
+}
+
 #project-toc li li {
   margin-left: 1.3rem;
 }
 
+/* For responsive, mobile screens */
 @media (max-width: 992px) {
   .pj-layout {
     display: grid;
@@ -12187,6 +12200,45 @@ pre code.pj-code {
   }
   .pj-sidebar {
     display: none;
+  }
+  .pj-main {
+    width: 80vw;
+  }
+  .pj-main p,
+  .pj-main ul,
+  .pj-main ol {
+    word-wrap: break-word;
+    text-wrap: wrap;
+    display: inline;
+    white-space: pre-line;
+    width: 80vw;
+  }
+  .pj-main img {
+    max-height: 70vh;
+    max-width: 80vw;
+    -o-object-fit: contain;
+       object-fit: contain;
+    overflow: hidden;
+    /* center the image */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  /* this is used to have larger images not overflow and get clipped on mobile screens */
+  .pj-main img.img-lg {
+    max-width: 100%;
+  }
+  /* overwrite the bootstrap class to switch from flex-row to flex-column */
+  .flex-row {
+    flex-direction: column !important;
+    flex-wrap: nowrap;
+  }
+  /* overwrite the bootstrap class to remove the right margin on images */
+  img.me-5 {
+    margin-right: 0 !important;
+  }
+  .max-height-override {
+    max-height: 100% !important;
   }
 }
 .nav-link {
@@ -12223,9 +12275,8 @@ pre code.pj-code {
 
 /* used to make the heights of each card the same */
 .flex-card {
-  flex: 1;
-  min-width: 17%;
-  max-width: 17%;
+  width: 300px;
+  height: 500px;
 }
 
 /* adds a right margin, since mr doesn't seem to be working in bootstrap? */
@@ -12235,9 +12286,9 @@ pre code.pj-code {
 
 /* card to make a column for the title, content, etc */
 .flex-card-body {
-  height: 100%;
   /* Ensure each card-body takes up the entire height of the card */
   display: flex;
+  align-items: start;
   flex-direction: column;
 }
 
@@ -12249,11 +12300,12 @@ pre code.pj-code {
 
 /* class primarily for ensuring consistent card size */
 .card-image {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
+  width: auto;
+  height: 45%;
+  -o-object-fit: cover;
+     object-fit: cover;
   overflow: hidden;
+  border-radius: 5px;
 }
 
 @media (max-width: 992px) {
@@ -12264,11 +12316,6 @@ pre code.pj-code {
     margin-right: 0.5em;
     margin-left: 0.5em;
     gap: 2em;
-  }
-  .flex-card {
-    flex: 1;
-    min-width: 95%;
-    max-width: 95%;
   }
 }
 body {
